@@ -63,7 +63,7 @@ namespace KJS {
         
         typedef PropertyMapHashTableEntry Entry;
         
-        int _tableSizeHashMask;
+        int _tableSizeMask;
         int _tableSize;
         Entry *_table;
         int _keyCount;
